--- a/frontEnd/src/styles.module.css
+++ b/frontEnd/src/styles.module.css
@@ -1,3 +1,11 @@
+.layout{
+    height: 100vh;
+    display: grid;
+    place-content: center;
+}
+
+
+
 .form{
     display: flex;
     flex-direction: column;
